--- a/Helena-Cupcakes/cupcake.html
+++ b/Helena-Cupcakes/cupcake.html
@@ -22,42 +22,28 @@
    </ul>
  </nav>
  <body style="font-family:Verdana, Geneva, sans-serif">
+<nav>
+  <ul>
+    <li><b href=""></b></li>
+    <li><b href=""></b></li>
+    <li><b href=""></b></li>
+    <li><b href=""></b></li>
+    <li><b href=""></b></li>
+  </ul>
+  <nav>
+    <body style="font-family:Verdana, Geneva, sans-serif">
+    <ul>
+      <li><c href=""></c></li>
+      <li><c href=""></c></li>
+      <li><c href=""></c></li>
+      <li><c href=""></c></li>
+      <li><c href=""></c></li>
+    </ul>
 
 
-
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Red Velvet</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Vanilla</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Chocolate</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Blueberry</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Raspberry</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color: white; text-decoration:none;">Strawberry</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Vegan</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Bacon</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Cream-Filled</a></td>
-                         </tr>
-                         <tr>
-                             <td><a href="#" style="color:white; text-decoration:none;">Other</a></td>
-                         </tr>
-
+  <aside>
                      <h1>Welcome to the Helena Cupcake Shop!</h1>
-                     <p><a href="#"><img src="buy.jpg" width="320" height="200" alt="Buy Cupcakes" align="right" /></a>The Helena Cupcake Shop is the perfect place if you are looking to order the best cupcakes in the surrounding Helena area. We've searched the world for the best cupcake recipes and brought them here to this neck of the woods. You want cupcakes? We got 'em! </p>
+                     <p><a href="#"><img src="buy.jpg" width="420" height="300" alt="Buy Cupcakes" align="right" /></a>The Helena Cupcake Shop is the perfect place if you are looking to order the best cupcakes in the surrounding Helena area. We've searched the world for the best cupcake recipes and brought them here to this neck of the woods. You want cupcakes? We got 'em! </p>
 
                      <h2>For Whom Shall I Buy?</h2>
                      <p>Wanna buy a cupcake for your girlfriend? We got cupcakes. Wanna buy them for your wife? Done and done. Your husband or boyfriend? They couldn't do without. What about for yourself? Whoa, do we have cupcakes. Vanilla, chocolate, strawberry, vegan... every kind of cupcake you can think of.</p>
@@ -69,7 +55,7 @@
                      <p>Look, if you want ice cream or candy, you will have to look elsewhere. We specialize and focus on cupcakes... that's why we're the best!</p>
 
                  <td colspan="3" style="font-size:11px;"><b>Copyright &copy; 2022 The Helena Cupcake Shop, Retail Division of CS 202 Web Design and Development</b><br />
-                     <a href="#">Site Map</a> &nbsp;&nbsp;&nbsp; <a href="#">Contact Us</a> &nbsp;&nbsp;&nbsp; <a href="#">FAQs</a> &nbsp;&nbsp;&nbsp; <a href="#">Our Guarantee</a> &nbsp;&nbsp;&nbsp; <a href="#">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="" class="FooterLinks">Terms and Conditions</a></td>
+                     <a href="#">Site Map</a>  <a href="#">Contact Us</a> <a href="#">FAQs</a> <a href="#">Our Guarantee</a> <a href="#">Privacy Policy</a>  <a href="" class="FooterLinks">Terms and Conditions</a></td>
 
      </div>
  </body>
